[package]
name = "uu"
version = "1.0.0"
authors = ["Pablo Tato Ramos"]
license = "MIT"
edition = "2018"

[profile.release]
debug = true

[dependencies.uu-rust-macros]
path = "uu-rust-macros"

[dependencies.unicode-segmentation]
version = "1.3"

[dependencies.nfd] # native file dialogs
git = "https://github.com/saurvs/nfd-rs"
rev = "07578c5"

[dependencies.glium]
version = "0"
[dependencies.imgui]
path = "imgui-rs/imgui"
[dependencies.imgui-glium-renderer]
path = "imgui-rs/imgui-glium-renderer"
[dependencies.imgui-winit-support]
path = "imgui-rs/imgui-winit-support"