[package]
name = "uu"
version = "1.0.0"
authors = ["Pablo Tato Ramos"]
license = "MIT"
edition = "2018"

[profile.release]
debug = true

[dependencies]
uu-rust-macros = { path = "uu-rust-macros" }
unicode-segmentation = "1.3"
nfd = { git = "https://github.com/saurvs/nfd-rs", rev = "07578c5" }
glutin = "0"
femtovg = "0"
resource = "0"
