[package]
name = "uu"
version = "1.0.0"
authors = ["Pablo Tato Ramos"]
license = "MIT"
edition = "2018"

[profile.release]
debug = true

[dependencies]
once_cell = "1"
unicode-segmentation = "1.3"
nfd = { git = "https://github.com/saurvs/nfd-rs", rev = "07578c5" }
glutin = "0"
femtovg = "0"
resource = "0"
msgbox = "0"
